# operation_brain_ai

./: .gitignore  readme.md
backend/: .env,prod  .env.dev  .env.example  .gitignore  BACKEND_STRUCTURE.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2bd8228562d4_init.py  5260a3b527ef_update_knowledge.py  665d5d0632eb_init_model.py  6aadf6767ee3_remove_knowledge_base_description.py  6f32e85c528a_update_knowledge_ids_str32_to_str100.py  a7c12e4b91f5_create_chat_tables.py  b7ed30c31b72_init1.py  c606873740ba_role1.py  d474d7f22523_remove_knowledge_parent_id.py  eb43149f5450_role.py
backend/core/: deps.py  exception_handler.py  redis.py  reponse.py  security.py  settings.py
backend/db/: session.py
backend/db/models/: __init__.py  chat.py  knowledge.py  user.py
backend/repository/: chat_repo.py  knowledge_repo.py  users_repo.py
backend/router/: chat_router.py  knowledge_router.py  users_router.py
backend/schema/: chat_schema.py  knowledge_schema.py  response.py  user_schema.py
backend/service/: agent_service.py  knowledge_ingest_service.py  rag_service.py  sms_service.py  structure_analyzer.py  vector_store_service.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  chat.ts  core.ts  knowledge.ts  users.ts
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/styles/: global.less  variables.less
frontend/src/types/: knowledge.ts
frontend/src/utils/: knowledgePreview.ts  knowledgePreview.types.ts  knowledgePreviewMock.ts  markdown.ts  request.ts
frontend/src/views/: Chat.vue  Login.vue  Register.vue
frontend/src/views/Chat/: Chat.vue
frontend/src/views/Home/: Home.vue
(+22 files in other folders)
