[project]
name = "operation_brain_ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "pydantic-settings>=2.8.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.49",
]
