[project]
name = "operation_brain_ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "pydantic-settings>=2.8.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.49",
    "bcrypt>=4.0.0",
    "redis==7.1.0",
    "alibabacloud-dypnsapi20170525>=2.0.0",
    "alembic>=1.18.4",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.44.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.26",
    "pgvector>=0.4.2",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.13",
    "langchain-text-splitters>=1.1.1",
    "pypdf>=6.10.1",
    "python-docx>=1.2.0",
    "pandas>=3.0.2",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
    "markdown>=3.10.2",
    "beautifulsoup4>=4.14.3",
]
